# dev-workflow

./: .gitignore  README.md  package.json
.claude-plugin/: marketplace.json  plugin.json
docs/: compozy-integration.md  impeccable-integration.md  security-gate.md  skills-ecosystem-comparison.md
docs/superpowers/plans/: 2026-04-10-gsd-integration.md
docs/superpowers/specs/: 2026-04-06-refactoring-analysis-and-topology-design.md  2026-04-10-gsd-integration-design.md
lib/: agents.js  build-plugin.js  constants.js  doctor.js  hooks.js  init.js  install-deps.js  install-state.js  list-installed.js  mcp.js  migrate-gsd.js  migrate-skills.js  post-update.js  profiles.js  prompts.js  removed-bundled-skills.js  setup-wsl-browser.js  skill-registry.js  subtasks.js  uninstall.js  utils.js  validate.js  wrappers.js
scaffold/: agent-registry.json  rules-readme.md  skill-registry.json
scaffold/agents/core/: dw-build-fixer.md  dw-code-explorer.md  dw-code-reviewer.md  dw-planner.md  dw-test-author.md
scaffold/agents/csharp/: dw-csharp-reviewer.md  dw-dotnet-build-fixer.md
scaffold/agents/frontend/: dw-qa-runner.md
scaffold/agents/python/: dw-python-build-fixer.md  dw-python-reviewer.md
scaffold/config/: stack-mappings.json
scaffold/en/: agent-instructions.md
scaffold/pt-br/: agent-instructions.md
scaffold/rules/: README.md  common.md  csharp.md  python.md  react.md  rust.md  typescript.md
scaffold/scripts/cdp-relay/: Cargo.toml
scaffold/scripts/cdp-relay/src/: main.rs
test/: init-update.test.js  scaffold-contract.test.js  utils.test.js
(+311 files in other folders)
